# newnewid-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  poetry.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish.yaml
src/newnewid/: cli.py
src/newnewid/clock/: uuid_clock.py
src/newnewid/counter/: counter.py
src/newnewid/draft_ietf_uuidrev_rfc4122bis_00/: nil_uuid_generator.py
src/newnewid/draft_ietf_uuidrev_rfc4122bis_02/: __init__.py
src/newnewid/draft_ietf_uuidrev_rfc4122bis_03/: __init__.py
src/newnewid/draft_peabody_dispatch_new_uuid_format_01/: uuid6_generator.py  uuid7_generator.py  uuid8_generator.py
src/newnewid/draft_peabody_dispatch_new_uuid_format_02/: __init__.py
src/newnewid/draft_peabody_dispatch_new_uuid_format_03/: __init__.py  max_uuid_generator.py  uuid7_generator.py  uuid8_generator.py
src/newnewid/draft_peabody_dispatch_new_uuid_format_04/: __init__.py
src/newnewid/exception/: backward_uuid_exception.py
src/newnewid/parser/: uuid_parser.py
src/newnewid/random/: pseudo_random_binary_generator.py  pseudo_random_generator.py
src/newnewid/util/: nodoc.py  specloader.py
src/newnewid/uuidgenerator/: clock_based_uuid_generator.py  gregorian_based_uuid_generator.py  uuid_generator.py
src/newuuid/: __init__.py  cli.py
src/newuuid/clock/: uuid_clock.py
src/newuuid/draft_ietf_uuidrev_rfc4122bis_00/: __init__.py  nil_uuid_generator.py
src/newuuid/draft_ietf_uuidrev_rfc4122bis_01/: __init__.py  max_uuid_generator.py  uuid6_generator.py  uuid8_generator.py
src/newuuid/draft_ietf_uuidrev_rfc4122bis_02/: __init__.py  nil_uuid_generator.py  uuid7_generator.py
src/newuuid/draft_peabody_dispatch_new_uuid_format_01/: __init__.py  uuid6_generator.py  uuid7_generator.py  uuid8_generator.py
src/newuuid/util/: random.py  (+1 more)
tests/: assert_uuid.py  const.py  frozen_clock.py  frozen_pseudo_random_generator.py  sample_test.py  test_uuid7.py  test_uuid8.py  uuid7_test.py  uuid8_test.py
tests/draft_peabody_dispatch_new_uuid_format_01/: test_uuid6_dpdnuf_01.py  test_uuid7_dpdnuf_01.py  uuid6_dpdnuf_01_test.py  uuid7_dpdnuf_01_test.py
(+15 files in other folders)
